Version 2.77.3.1 - 29 July 2009, Thierry Vignaud

- mdkapplet-enterprise-update-helper
  o fix my.mdv.com URL

Version 2.77.3 - 28 July 2009, Thierry Vignaud

- mdkapplet-enterprise-update-helper
  o gracefully handle (rare) server issues (#51299)
  o use proper URL for MES

Version 2.77.2 - 24 July 2009, Thierry Vignaud

- mdkapplet, mdkapplet-enterprise-update-helper
  o do not display PowerPack but real product name (#52292)
  o on MES5, offer to add update media from authenticated server
- mdkapplet-restricted-helper
  o gracefully handle (rare) server issues (#51299, #51548)
- mdkapplet
  o if current distribution is no more supported, warn so and offer to
    upgrade to latest release
- mdkapplet-upgrade-helper
  o remove the "upgrade in progress" flag when adding media failed
    (might fix #50450)

Version 2.77.1 - 12 May 2009, Thierry Vignaud

- mdkapplet
  o add 2009.1 restricted media on 2009.1 (#50478)
  o remember a new distro exists when checking for updates (distro
    check is less frequent) (#50535)
  o perform initial check after 3 seconds when using --testing
- mdkapplet-restricted-helper
  o prevent having to cancel several time (#48999)

Version 2.77 - 17 April 2009, Thierry Vignaud

- mdkapplet
  o do not complain when network is down if net_applet is running
    (which will already warn about this)

Version 2.76.2 - 15 April 2009, Thierry Vignaud

- translation updates

Version 2.76.1 - 30 March 2009, Thierry Vignaud

- translation updates

Version 2.76 - 25 March 2009

- mdkapplet-config
  o display update frenquency in hours
  o display intial delay in minutes
  o ensure update frenquency is at least 1 hour

Version 2.75 - 19 March 2009

- mdkapplet
  o check all media for update on cooker instead only update media
  o update all media on cooker instead of only update media

Version 2.74 - 16 February 2008

- mdkapplet-config
  o add an updates configurator (#37903)

Version 2.73 - 11 February 2008

- mdkapplet