@@ -1,3 +1,6 @@
+- mdkapplet-config
+  o better looking when embedded in MCC
+
 Version 2.77.3.1 - 29 July 2009, Thierry Vignaud
 
 - mdkapplet-enterprise-update-helper
